--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Required by permission_handler to work with Bluetooth permissions on Android 12+
+PERMISSION_BLUETOOTH=1
+PERMISSION_BLUETOOTH_CONNECT=1
+PERMISSION_BLUETOOTH_SCAN=1
