--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:maxSdkVersion="28" />
 
     <application
-        android:label="capstone"
+        android:label="CleanFlow"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
