--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,14 +54,16 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-  flutter_launcher_icons: "^0.14.1"
+  flutter_launcher_icons: ^0.14.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon2.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
-
+  remove_alpha_ios: true
+  image_path: "assets/cf.png"
+  min_sdk_android: 24 # android min sdk min:16, default 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/cf.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
