--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,16 @@ dependencies:
   cupertino_icons: ^1.0.6
   path_provider: ^2.1.4
   shared_preferences: ^2.3.2
+  flutter_native_splash: ^2.4.1
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  background_image: "assets/splashBG.png"
+  android_12:
+    background_image: "assets/splashBG.png"
+    image: "assets/splash.png"
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +81,7 @@ flutter_launcher_icons:
 flutter:
   assets:
     - assets/
+    
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
