--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.1.4
   shared_preferences: ^2.3.2
   flutter_native_splash: ^2.4.1
+  fl_chart: ^0.69.2
 
 flutter_native_splash:
   android: true
