--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.3.2
   flutter_native_splash: ^2.4.1
   fl_chart: ^0.69.2
+  popover: ^0.2.8+2
 
 flutter_native_splash:
   android: true
